fix tests application failed to start fix